--- a/nickdima/silk_thai/template/homepage/about.html
+++ b/nickdima/silk_thai/template/homepage/about.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-	{% include universal.html %}
+  {% include 'universal.html' %}
 </head>
 <body>
 <!--Navigation bar-->
