--- a/nickdima/silk_thai/template/homepage/home.html
+++ b/nickdima/silk_thai/template/homepage/home.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
-  {% include universal.html %}
+  {% include 'universal.html' %}
   <meta name="description" content="">
   <title>Home</title>
   <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/web/assets/mobirise-icons/mobirise-icons.css' ) }}">
