--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
-  {% include universal.html %}
+  {% include 'universal.html' %}
 
 
   <meta name="description" content="A menu of the food at Thai Charlottesville">
