--- a/nickdima/silk_thai/template/universal.html
+++ b/nickdima/silk_thai/template/universal.html
@@ -2,4 +2,4 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="generator" content="Mobirise v4.8.1, mobirise.com">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<link rel="shortcut icon" href="{{ url_for('menu.static', filename='assets/images/silk_thai_fav.png') }}" type="image/x-icon">
+<link rel="shortcut icon" href="{{ url_for('menu.static', filename='assets/images/favicon.png') }}" type="image/x-icon">
