added large silk logo

--- a/nickdima/silk_thai/template/homepage/home.html
+++ b/nickdima/silk_thai/template/homepage/home.html
@@ -54,7 +54,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="{{ url_for('homepage.home') }}">
-                        <img src="{{ url_for('homepage.static', filename='assets/images/logo2.png') }}" alt="Mobirise">
+                        <img src="{{ url_for('homepage.static', filename='assets/images/silk_thai_large.png') }}" alt="Mobirise">
                     </a>
                 </div>
             </div>
