added unniversal bottom

--- a/nickdima/silk_thai/template/homepage/about.html
+++ b/nickdima/silk_thai/template/homepage/about.html
@@ -9,5 +9,8 @@
 <!--End navigation bar-->
 
 	<img src="https://i.imgflip.com/2g44kd.jpg" title="About us">
+
+
+{% include 'universal-bottom.html' %}
 </body>
 </html>
