--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -149,6 +149,8 @@
 </div>
 
 
+{% include 'universal-bottom.html' %}
+
 
   <script src="{{ url_for('menu.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
   <script src="{{ url_for('menu.static', filename='assets/popper/popper.min.js') }}"></script>
