--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -133,6 +133,8 @@
 <!--End button section on the bottom-->
 
 
+{% include 'universal-bottom.html' %}
+
   <script src="{{ url_for('checkout.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
   <script src="{{ url_for('checkout.static', filename='assets/popper/popper.min.js') }}"></script>
   <script src="{{ url_for('checkout.static', filename='assets/tether/tether.min.js') }}"></script>
