--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -135,6 +135,8 @@
 </section>
 
 
+{% include 'universal-bottom.html' %}
+
   <script src="{{ url_for('checkout.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
   <script src="{{ url_for('checkout.static', filename='assets/popper/popper.min.js') }}"></script>
   <script src="{{ url_for('checkout.static', filename='assets/tether/tether.min.js') }}"></script>
