--- a/nickdima/silk_thai/template/homepage/feedback_form.html
+++ b/nickdima/silk_thai/template/homepage/feedback_form.html
@@ -80,6 +80,8 @@
 </section>
 
 
+{% include 'universal-bottom.html' %}
+
   <script src="{{ url_for('homepage.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
   <script src="{{ url_for('homepage.static', filename='assets/popper/popper.min.js') }}"></script>
   <script src="{{ url_for('homepage.static', filename='assets/tether/tether.min.js') }}"></script>
