added digital menu link

--- a/nickdima/silk_thai/template/universal-bottom.html
+++ b/nickdima/silk_thai/template/universal-bottom.html
@@ -26,6 +26,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
+                <p class="mbr-text">Digital Menu <a href="#">PDF</a><br></p>
                 <p class="mbr-text">Created by <a href="https://www.linkedin.com/in/nicholas-dima-975070115/">Nick Dima</a><br></p>
             </div>
             <div class="charlottesville">
