universal css tags

--- a/nickdima/silk_thai/template/homepage/about.html
+++ b/nickdima/silk_thai/template/homepage/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   {% include 'universal.html' %}
+  {% include 'universal-css-links.html' %}
 </head>
 <body>
 <!--Navigation bar-->
