--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -5,16 +5,7 @@
   {% include 'universal.html' %}
   <meta name="description" content="Site Creator Description">
   <title>Checkout Page</title>
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/web/assets/mobirise-icons/mobirise-icons.css') }}">
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/tether/tether.min.css') }}">
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/bootstrap/css/bootstrap.min.css') }}">
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/bootstrap/css/bootstrap-grid.min.css') }}">
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/bootstrap/css/bootstrap-reboot.min.css') }}">
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/dropdown/css/style.css') }}">
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/socicon/css/styles.css') }}">
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/theme/css/style.css') }}">
-  <link rel="stylesheet" href="{{ url_for('checkout.static', filename='assets/mobirise/css/mbr-additional.css') }}" type="text/css">
-
+  {% include 'universal-css-links.html' %}
 </head>
 <body>
  <!--Navigation bar-->
