--- a/nickdima/silk_thai/template/homepage/feedback_form.html
+++ b/nickdima/silk_thai/template/homepage/feedback_form.html
@@ -5,14 +5,7 @@
   {% include 'universal.html' %}
   <meta name="description" content="Web Site Builder Description">
   <title>Contact Form</title>
-  <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/web/assets/mobirise-icons/mobirise-icons.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/tether/tether.min.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/bootstrap/css/bootstrap.min.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/bootstrap/css/bootstrap-grid.min.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/bootstrap/css/bootstrap-reboot.min.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/dropdown/css/style.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/theme/css/style.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/mobirise/css/mbr-additional.css' ) }}" type="text/css">
+  {% include 'universal-css-links.html' %}
 
 
 
