--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -7,15 +7,8 @@
 
   <meta name="description" content="A menu of the food at Thai Charlottesville">
   <title>Menu</title>
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/web/assets/mobirise-icons/mobirise-icons.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/tether/tether.min.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/bootstrap/css/bootstrap.min.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/bootstrap/css/bootstrap-grid.min.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/bootstrap/css/bootstrap-reboot.min.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/dropdown/css/style.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/theme/css/style.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/gallery/style.css' ) }}">
-  <link rel="stylesheet" href="{{ url_for('menu.static', filename='assets/mobirise/css/mbr-additional.css' ) }}" type="text/css">
+
+  {% include 'universal-css-links.html' %}
 
 
 
