--- a/nickdima/silk_thai/template/homepage/about.html
+++ b/nickdima/silk_thai/template/homepage/about.html
@@ -8,9 +8,9 @@
 <!--Navigation bar-->
 {% include 'nav.html' %}
 <!--End navigation bar-->
-
+	<div>
 	<img src="https://i.imgflip.com/2g44kd.jpg" title="About us">
-
+	</div>
 
 {% include 'universal-bottom.html' %}
 </body>
