--- a/nickdima/silk_thai/template/homepage/about.html
+++ b/nickdima/silk_thai/template/homepage/about.html
@@ -8,7 +8,7 @@
 <!--Navigation bar-->
 {% include 'nav.html' %}
 <!--End navigation bar-->
-	<div>
+	<div class="container">
 	<img src="https://i.imgflip.com/2g44kd.jpg" title="About us">
 	</div>
 
