--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -15,7 +15,9 @@
 {% include 'nav.html' %}
 <!--End navigation bar-->
 
-<section class="engine"><a href="https://mobiri.se/p">web templates free download</a></section><section class="mbr-gallery mbr-slider-carousel cid-r0QP3Dvzft" id="gallery2-d">
+<section class="engine"><a href="https://mobiri.se/p">web templates free download</a>
+</section>
+<section class="mbr-gallery mbr-slider-carousel cid-r0QP3Dvzft" id="gallery2-d">
 
 
     <div class="container">
