--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -57,7 +57,18 @@
             <!-- Lightbox (Image enlargement) -->
             <div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-d">
               <div class="modal-dialog">
-                <div class="modal-content"><div class="modal-body"><ol class="carousel-indicators"><li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#lb-gallery2-d" class=" active" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="7"></li></ol>
+                <div class="modal-content"><div class="modal-body">
+                  <ol class="carousel-indicators">
+                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="0"></li>
+                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="1"></li>
+                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="2"></li>
+                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="3"></li>
+                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="4"></li>
+                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="5"></li>
+                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" class=" active" data-slide-to="6"></li>
+                    <!--test, last one is drunken noodle-->
+                    <a href=" {{ url_for('food.food_pdp', item='Drunken_Noodles') }}"><li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="7"></li></a>
+                  </ol>
 
           <div class="carousel-inner">
 
