--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -79,7 +79,8 @@
 
             <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry1-725x483.jpg') }}" alt="" title=""></div>
 
-            <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry2-680x965.jpg') }}" alt="" title=""></div>
+            <!--Greeen Curry test clicking-->
+            <div class="carousel-item"><a href=" {{ url_for('food.food_pdp', item='Green_Curry') }}"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry2-680x965.jpg') }}" alt="" title=""></a></div>
             
             <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai2-2000x2000.jpg') }}" alt="" title=""></div>
             
@@ -88,7 +89,7 @@
             <div class="carousel-item active"><img src="{{ url_for('menu.static', filename='assets/images/pad-see-ew-610x458.jpg') }}" alt="" title=""></div>
 
             <!--test clicking image in carousel-->
-            <a href=" {{ url_for('food.food_pdp', item='Drunken_Noodles') }}"><div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/drunken-noodle-616x462.jpg') }}" alt="" title=""></div></a>
+            <div class="carousel-item"><a href=" {{ url_for('food.food_pdp', item='Drunken_Noodles') }}"><img src="{{ url_for('menu.static', filename='assets/images/drunken-noodle-616x462.jpg') }}" alt="" title=""></a></div>
           </div>
 
 
