--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -72,12 +72,11 @@
 
           <!--This is the enlarged image that appears-->
           <script>
-            function goToFoodUrl(item_name){
-              window.location.href = "{{ url_for('food.food_pdp', item='"+ item_name + "') }}">
+            function goToFoodUrl(item_url){
+              window.location.href = item_url;
             }
           </script>
           <div class="carousel-inner">
-
             <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528.jpg') }}" alt="" title=""></div>
 
             <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/calamari2-896x504.jpg') }}" alt="" title=""></div>
@@ -85,7 +84,7 @@
             <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry1-725x483.jpg') }}" alt="" title=""></div>
 
             <!--Greeen Curry test clicking-->
-            <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry2-680x965.jpg') }}" alt="" title="" onclick="goToFoodUrl('Green_Curry')"></div>
+            <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry2-680x965.jpg') }}" alt="" title="" onclick="goToFoodUrl({{ url_for('food.food_pdp', item='Green_Curry') }})"></div>
             
             <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai2-2000x2000.jpg') }}" alt="" title=""></div>
             
