--- a/nickdima/silk_thai/template/universal.html
+++ b/nickdima/silk_thai/template/universal.html
@@ -2,5 +2,5 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="generator" content="Mobirise v4.8.1, mobirise.com">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<meta property='og:image' content="{{ url_for('menu.static', filename='assets/images/socialimg.jpg') }}>
+<meta property='og:image' content="{{ url_for('menu.static', filename='assets/images/socialimg.jpg') }}">
 <link rel="shortcut icon" href="{{ url_for('menu.static', filename='assets/images/favicon.png') }}" type="image/x-icon">
