--- a/nickdima/silk_thai/template/universal.html
+++ b/nickdima/silk_thai/template/universal.html
@@ -2,5 +2,26 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="generator" content="Mobirise v4.8.1, mobirise.com">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<meta property='og:image' content="{{ url_for('menu.static', filename='assets/images/socialimg.jpg') }}">
-<link rel="shortcut icon" href="{{ url_for('menu.static', filename='assets/images/favicon.png') }}" type="image/x-icon">
+<link rel="shortcut icon" href="{{ url_for('menu.static', filename='assets/images/favicon.png') }}" type="image/x-icon"> <!--this is what iphones are using for the preview image small"-->
+
+
+
+
+<!--og is open graph protocol-->
+<meta property="og:type" content="restaurant.restaurant">
+<meta property="og:title" content="Silk Thai Charlottesville">
+<meta property="og:url" content="https://www.nickdima.com/thai/home">
+<meta property="og:description" content="Authentic Thai Food In Charlottesville">
+<meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/images/pad-thai1-940x528-800x449.jpg">
+<meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/images/yellow-curry1-725x483-725x483.jpg">
+<meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/images/calamari1-960x640-800x533.jpg">
+<meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/assets/images/pad-thai2-2000x2000.jpg">
+<meta property="restaurant:menu" content="http://www.nickdima.com/thai/menu/">
+<meta property="restaurant:contact_info:website" content="Silk Thai Charlottesville">
+<meta property="restaurant:contact_info:street_address" content="2210 Fontaine Avenue">
+<meta property="restaurant:contact_info:locality" content="Charlottesville">
+<meta property="restaurant:contact_info:region" content="Virginia">
+<meta property="restaurant:contact_info:postal_code" content="22903">
+<meta property="restaurant:contact_info:country_name" content="United States">
+<meta property="restaurant:contact_info:email" content="ncd2dq@virginia.edu">
+<meta property="restaurant:contact_info:phone_number" content="4349778424">
