added open graph tags

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -2,7 +2,14 @@
 <html >
 <head>
   <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
-  {% include 'universal.html' %}
+  <meta property="og:type" content="restaurant.menu">
+  <meta property="og:title" content="Silk Thai Menu">
+  <meta property="og:url" content="http://www.nickdima.com/thai/menu">
+  <meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/images/yellow-curry1-725x483-725x483.jpg">
+  <meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/images/pad-thai1-940x528-800x449.jpg">
+  <meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/images/calamari1-960x640-800x533.jpg">
+  <meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/assets/images/pad-thai2-2000x2000.jpg">
+  <meta property="restaurant:restaurant" content="http://www.nickdima.com/thai/home">
   <meta name="description" content="A menu of the food at Thai Charlottesville">
   <title>Menu</title>
   {% include 'universal-css-links.html' %}
