--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -2,6 +2,10 @@
 <html >
 <head>
   <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="generator" content="Mobirise v4.8.1, mobirise.com">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <meta property="og:type" content="restaurant.menu">
   <meta property="og:title" content="Silk Thai Menu">
   <meta property="og:url" content="http://www.nickdima.com/thai/menu">
