added rel icon to menu

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -14,6 +14,7 @@
   <meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/images/calamari1-960x640-800x533.jpg">
   <meta property="og:image" content="http://www.nickdima.com/thai/food/static/assets/assets/images/pad-thai2-2000x2000.jpg">
   <meta property="restaurant:restaurant" content="http://www.nickdima.com/thai/home">
+  <link rel="shortcut icon" href="{{ url_for('menu.static', filename='assets/images/favicon.png') }}" type="image/x-icon">
   <meta name="description" content="A menu of the food at Thai Charlottesville">
   <title>Menu</title>
   {% include 'universal-css-links.html' %}
