--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -28,7 +28,7 @@
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn">About Us</span>
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="{{ url_for('checkout.summary') }}"><span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Order</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="{{ url_for('checkout.summary') }}"><span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Cart</a></div>
         </div>
     </nav>
 </section>
