--- a/nickdima/silk_thai/template/homepage/about.html
+++ b/nickdima/silk_thai/template/homepage/about.html
@@ -9,7 +9,8 @@
 {% include 'nav.html' %}
 <!--End navigation bar-->
 	<div class="container" style="padding-top: 90px;">
-	<img src="https://i.imgflip.com/2g44kd.jpg" title="About us">
+	<!--<img src="https://i.imgflip.com/2g44kd.jpg" title="About us">-->
+	We are currently building this page out!
 	</div>
 
 {% include 'universal-bottom.html' %}
