--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -31,6 +31,16 @@
     -webkit-transform:scale(1.5);
     transform:scale(1.5);
   }
+
+  #wrapper {
+    width: 100%;
+    height: 400px;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   </style>
 
     <div class="container align-center">
@@ -38,7 +48,7 @@
             Customization Page
         </h2>
         <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">
-        	Edit your selection below!
+        	Edit your food below!
         </h3>
 
         <div class="row media-row">
@@ -51,7 +61,7 @@
                         <div class="card-img">
                             <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="pong">
                         </div>
-                        <div class="card-box">
+                        <div class="card-box"> <!--food box entity-->
                           <div class="item-name px-2">
                               <p class="mbr-fonts-style display-5">
                                  {{selected_item['Base']}}
@@ -70,6 +80,35 @@
                           <div class="item-role px-2">
                               <p class="mbr-fonts-style display-5">Price: {{ selected_item['Base Price'] }}</p>
                           </div>
+
+                          <!--customization starts here-->
+                          <div id="wrapper">
+                              <form action="" method="POST">
+                                Spice Level <select name="spice" id="spice">
+                                  <option value='Default'>Default</option>
+                                  <option value="0">0</option>
+                                  <option value="1">1</option>
+                                  <option value="2">2</option>
+                                  <option value="3">3</option>
+                                  <option value="4">4</option>
+                                  <option value="5">5</option>
+                                </select>
+
+                                With <select name="topping" id="topping">
+                                  <option value='Chicken'>Chicken</option>
+                                  <option value="Beef">Beef</option>
+                                </select>
+
+                                Extra <select name="topping" id="topping">
+                                  <option value='Chicken'>Chicken</option>
+                                  <option value="Beef">Beef</option>
+                                </select>
+
+                                <textarea name="custom_modify" rows="5" cols="20">Exclusions, notes, etc.</textarea>
+                                
+                              </form>
+                          </div>
+
                         </div>
                         <div class="mbr-section-btn text-center">
                             <a href="/test_pong/test_pong_game" class="btn btn-primary display-4">
