--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -34,11 +34,14 @@
 
   #wrapper {
     width: 100%;
+
     height: 400px;
-    border: 1px solid black;
+    /*
+    border: 1px solid black;*/
     display: flex;
     align-items: center;
-    justify-content: center;
+    /*
+    justify-content: center;*/
   }
 
   </style>
@@ -105,7 +108,7 @@
                                 </select>
 
                                 <textarea name="custom_modify" rows="5" cols="20">Exclusions, notes, etc.</textarea>
-                                
+
                               </form>
                           </div>
 
