using mobirise css

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -85,7 +85,7 @@
                           </div>
 
                           <!--customization starts here-->
-                          <div id="wrapper">
+                          <div class="item-role px-2"> <!--id="wrapper">-->
                               <form action="" method="POST">
                                 Spice Level <select name="spice" id="spice">
                                   <option value='Default'>Default</option>
