--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -32,18 +32,6 @@
     transform:scale(1.5);
   }
 
-  #wrapper {
-    width: 100%;
-
-    height: 400px;
-    /*
-    border: 1px solid black;*/
-    display: flex;
-    align-items: center;
-    /*
-    justify-content: center;*/
-  }
-
   </style>
 
     <div class="container align-center">
@@ -85,8 +73,8 @@
                           </div>
 
                           <!--customization starts here-->
-                          <div class="item-role px-2"> <!--id="wrapper">-->
-                              <form action="" method="POST">
+                          <div class="item-role px-2">
+                              <form action="" method="POST" class="mbr-fonts-style display-5">
                                 Spice Level <select name="spice" id="spice">
                                   <option value='Default'>Default</option>
                                   <option value="0">0</option>
@@ -97,19 +85,19 @@
                                   <option value="5">5</option>
                                 </select>
 
-                                <br>
+                                <br><br>
                                 With <select name="topping" id="topping">
                                   <option value='Chicken'>Chicken</option>
                                   <option value="Beef">Beef</option>
                                 </select>
 
-                                <br>
+                                <br><br>
                                 Extra <select name="topping" id="topping">
                                   <option value='Chicken'>Chicken</option>
                                   <option value="Beef">Beef</option>
                                 </select>
 
-                                <br>
+                                <br><br>
                                 <textarea name="custom_modify" rows="5" cols="20">Exclusions, notes, etc.</textarea>
 
                               </form>
