--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -74,7 +74,7 @@
 
                           <!--customization starts here-->
                           <div class="item-role px-2">
-                              <form action="" method="POST" class="mbr-fonts-style display-5">
+                              <form action="" method="POST" class="mbr-fonts-style display-6">
                                 Spice Level <select name="spice" id="spice">
                                   <option value='Default'>Default</option>
                                   <option value="0">0</option>
@@ -98,8 +98,7 @@
                                 </select>
 
                                 <br><br>
-                                <textarea name="custom_modify" rows="5" cols="20">Exclusions, notes, etc.</textarea>
-
+                                <textarea name="custom_modify" rows="5" cols="20" placeholder="Exclusions, notes, etc."></textarea>
                               </form>
                           </div>
 
