--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="mbr-section-btn text-center">
                             <a href="/test_pong/test_pong_game" class="btn btn-primary display-4">
-                                Play
+                                Add to cart
                             </a>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                         <!--<input class="form-control" type="email" name="email" placeholder="Name" data-form-field="Email" required="" id="email-form3-j">-->
                         <input type="hidden" name="item1" value="thai currey">
                         <input type="hidden" name="item2" value="thai tea">
-                        <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Submit Order</button></span>
+                        <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Checkout</button></span>
 
                     </div>
                 </form>
