trying to center pdp buttons

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -145,7 +145,12 @@
                         <!--<input class="form-control" type="email" name="email" placeholder="Name" data-form-field="Email" required="" id="email-form3-j">-->
                         <input type="hidden" name="item1" value="thai currey">
                         <input type="hidden" name="item2" value="thai tea">
-                        <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Checkout</button></span>
+                        <div class="mbr-section-btn text-center">
+                            <button href="" class="btn btn-primary display-4">
+                                Checkout
+                            </button>
+                        </div>
+                        <!--<span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Checkout</button></span>-->
 
                     </div>
                 </form>
