--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -141,7 +141,7 @@
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">the order page was submitted</div>
                 <form class="mbr-form" action="{{ url_for('checkout.summary') }}" method="post" data-form-title="Mobirise Form"><!--<input type="hidden" name="email" data-form-email="true" value="705DbCTbf81Lwv4tQcqg+WZp2p4fzU7WHcXa1wmByg5evmxi+pH7k7f2OsFKHR79s/ck1GlFHoIouzX+ahXvnMeeXLzNJgAdQjdBTY0quIlRUSsDHuX5jAYZ7l3UDPOu" data-form-field="Email">-->
-                    <div class="mbr-subscribe input-group">
+                    <!--<div class="mbr-subscribe input-group">-->
                         <!--<input class="form-control" type="email" name="email" placeholder="Name" data-form-field="Email" required="" id="email-form3-j">-->
                         <input type="hidden" name="item1" value="thai currey">
                         <input type="hidden" name="item2" value="thai tea">
@@ -152,7 +152,7 @@
                         </div>
                         <!--<span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Checkout</button></span>-->
 
-                    </div>
+                    <!--</div>-->
                 </form>
             </div>
         </div>
