added extra rice function

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -111,8 +111,10 @@
                                   {% endfor %}
                                 </select>
                                 <br><br>
+
+                                And <input type="number" id="extra_rice" name="extra_rice" min="0" max="5" step="1" value="0"> Extra Rice ($2 each)
                                 {% endif %}
-                                
+
                                 <textarea name="custom_modify" rows="5" cols="20" placeholder="Exclusions, notes, etc."></textarea>
                               </form>
                           </div>
