--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -69,8 +69,30 @@
                               </p>
                           </div>
                           <div class="item-role px-2">
-                              <p class="mbr-fonts-style display-5">Price: {{ selected_item['Base Price'] }}</p>
+                              <p class="mbr-fonts-style display-5" id="the_price">Price: {{ selected_item['Base Price'] }}</p>
                           </div>
+
+                          <!--Price Updater Script-->
+                          <script>
+                            function parseExtraPrice(val){
+                              let price = val.slice(val.indexOf('$') + 1, val.length);
+                              return parseInt(price, 10);
+                            }
+
+                            function changePrice(){
+                              //Check IDs 'topping' 'extra' 'extra_rice'
+                              let base_price = {{ selected_item['Base Price'] }};
+                              let topping = parseExtraPrice(document.getElementById('topping').value);
+                              let extra = parseExtraPrice(document.getElementById('extra').value);
+                              let extra_rice = parseExtraPrice(document.getElementById('extra_rice').value);
+
+                              let cur_price = document.getElementById('the_price');
+
+                              let additional = topping + extra + (extra_rice * 2);
+                              cur_price.value = parseInt(base_price, 10) + additional;
+                            }
+                          </script>
+                          <!--End price updater-->
 
                           <!--customization starts here-->
                           <div class="item-role px-2">
@@ -92,7 +114,7 @@
                                 <!--Topping option-->
                                 <!--Itemname, Extra Price-->
                                 <!-- Display "Chicken +$2" if extra price"-->
-                                With <select name="topping" id="topping">
+                                With <select name="topping" id="topping" onchange="changePrice();">
                                   {% for topping in selected_item['Toppings'] %}
                                   <option value="{{ topping[0] }}">{{ topping[0] }}{% if topping[1] != 0 %} +${{ topping[1] }}{% endif %}</option>
                                   {% endfor %}
@@ -105,14 +127,14 @@
                                 <!--Topping option-->
                                 <!--Itemname, Extra Price-->
                                 <!-- Display "Chicken +$2" if extra price"-->
-                                Extra <select name="extra" id="extra">
+                                Extra <select name="extra" id="extra" onchange="changePrice();">
                                   {% for extra in selected_item['Extra'] %}
                                   <option value="{{ extra[0] }}">{{ extra[0] }}{% if extra[1] != 0 %} +${{ extra[1] }}{% endif %}</option>
                                   {% endfor %}
                                 </select>
                                 <br><br>
 
-                                And <input type="number" id="extra_rice" name="extra_rice" min="0" max="5" step="1" value="0"> Extra Rice ($2 each)
+                                And <input type="number" id="extra_rice" name="extra_rice" min="0" max="5" step="1" value="0" onchange="changePrice();"> Extra Rice ($2 each)
                                 <br><br>
                                 {% endif %}
 
