--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -89,7 +89,8 @@
                               let cur_price = document.getElementById('the_price');
 
                               let additional = topping + extra + (extra_rice * 2);
-                              cur_price.value = parseInt(base_price, 10) + additional;
+                              console.log('add' + additional);
+                              cur_price.innerText = parseInt(base_price, 10) + additional;
                             }
                           </script>
                           <!--End price updater-->
