--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -75,8 +75,11 @@
                           <!--Price Updater Script-->
                           <script>
                             function parseExtraPrice(val){
-                              let price = val.slice(val.indexOf('$') + 1, val.length);
-                              return parseInt(price, 10);
+                              if(val.indexOf('$') != -1){
+                                let price = val.slice(val.indexOf('$') + 1, val.length);
+                                return parseInt(price, 10);
+                              }
+                              return 0;
                             }
 
                             function changePrice(){
@@ -90,7 +93,7 @@
 
                               let additional = topping + extra + (extra_rice * 2);
                               console.log('add' + additional);
-                              cur_price.innerText = parseInt(base_price, 10) + additional;
+                              cur_price.innerText = 'Price: ' + (parseInt(base_price, 10) + additional);
                             }
                           </script>
                           <!--End price updater-->
