--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -93,7 +93,7 @@
 
                               let additional = topping + extra + (extra_rice * 2);
                               console.log('add' + additional);
-                              cur_price.innerText = 'Price: ' + (parseInt(base_price, 10) + additional) + base_price.slice(2,4);
+                              cur_price.innerText = 'Price: ' + (parseInt(base_price, 10) + additional) + base_price.toString().slice(2,4);
                             }
                           </script>
                           <!--End price updater-->
