put javascript in a function

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -159,7 +159,9 @@
 
                         </div>
                         <script>
-                          document.getElementById('food_entry').submit();
+                          function submit_food(){
+                            document.getElementById('food_entry').submit();
+                          }
                         </script>
                         <div class="mbr-section-btn text-center">
                             <button class="btn btn-primary display-4" onclick="submit_food();">
